Edits from John Moore.

--- a/BrGr_Omnivory_2013.tex
+++ b/BrGr_Omnivory_2013.tex
@@ -105,7 +105,7 @@ important because they provide a unique way for detrital
 biomass to re-enter and affect the grazing web \citep{Polis:1996}. Such cross-chain feeding allows consumers to access detritus
 directly (by eating detritus) and/or indirectly (by feeding on lower consumers
 that are themselves detritivores or multi-channel consumers). This key link between
-predation and the resource pool critical to nutrient cycling may
+predation and the resource pool that is critical to nutrient cycling may
 complicate the effect of multi-channel feeding on food web
 stability: while detritus is often stabilizing when included in simple
 food web models \citep{Moore:2004}, its role may change when predator
@@ -114,8 +114,8 @@ dynamics with top-down control are linked to more than one resource \citep{Holt:
 \indent Here we examine the prevalence of multi-channel feeding in real systems, and its role in the stability of modeled food webs. First, we examine whether multi-channel feeding is prevalent within and across real systems, using 23 empirical food
 webs. Theoretical studies make mixed predictions regarding the
 prevalence of multi-channel feeding, particularly whether it is more common at
-higher versus lower trophic levels. Recent theory suggests that predators linking distinct energy
-sources should occur at higher trophic levels in food webs
+higher versus lower trophic levels. Recent theory suggests that predators linking distinctly different energy
+sources (i.e., fast and slow channels) should occur at higher trophic levels in food webs
 \citep{Rooney:2006} and should derive their energy equally
 across energy sources. However, earlier work suggested that distinct energy channels
 based on living-autotroph versus detrital resources basically
@@ -348,7 +348,7 @@ analyzed in R 2.12.0.
 \\
 \indent Our models suggest that the degree to which multi-channel feeding affects system stability and return time depends on the system type
 (terrestrial or freshwater) and the rates at which omnivores attack living
-autotrophs versus detritus. In both system types, models with multi-channel feeding produced fewer parameter sets generating stable models compared to models without such omnivory (Table 2, comparisons to herbivory- and detritivory-only models). 
+autotrophs versus detritus. In both system types, models with multi-channel feeding produced fewer parameter sets generating stable models compared to models herbivory-only and detritivory-only models (Table 2). 
 \newline
 \indent The effect of multi-channel feeding on system resilience varied by system type. In terrestrial systems, multi-channel feeding tended to produce systems with
 intermediate resilience between the least resilient detritivory-only
@@ -396,7 +396,7 @@ intraguild predation \citep{Rudolf:2007,miller2011}. While
 our 23 food webs are still a small sample, our results
 suggest that current webs capture highly connected systems. Grazing
 chains exist only as one part of webs heavily subsidized by widespread
-consumer interactions with the detrital web \citep{Moore:2004}. Thus, while our modeling work showed detritivory-only or herbivory-only systems may be the most stable (Table 2), our empirical web findings suggest that such systems are highly unrealistic.
+consumer interactions with the detrital web \citep{Moore:2004}. Thus, while our modeling work showed detritivory-only or herbivory-only systems may be the most stable (Table 2), our empirical web findings suggest that such systems are rare, and are not representative of real systems.
 \\
 \\
 \noindent \emph{Stability \& multi-channel feeding in modeled webs}\\
@@ -405,7 +405,7 @@ consumer interactions with the detrital web \citep{Moore:2004}. Thus, while our 
 green worlds may stabilize food webs under certain conditions. 
 Using a simple food web model with nutrient cycling and considering stability as assessed by return times calculated from the
 dominant eigenvalue, we found models with multi-channel feeding often produced
-stable webs. Such models, however, produced generally the fewest stable systems, compared to detritivory-only models, which produced only stable systems, and herbivory-only systems (Table 2). While return times were higher for multi-channel consumer models compared to herbivory-only, we found that multi-channel feeding could have a stabilizing effect in both terrestrial and freshwater parameter sets, even without the stabilizing forces of
+stable webs. Such models, however, produced generally the fewest stable systems, compared to detritivory-only models, which produced only stable systems, or herbivory-only systems (Table 2). While return times were higher for multi-channel consumer models compared to herbivory-only, we found that multi-channel feeding could have a stabilizing effect in both terrestrial and freshwater parameter sets, even without the stabilizing forces of
 predator-switching often used in other models that introduce this sort of omnivory
 \citep{Rooney:2006}. In particular, we found high attack rates on
 both autotrophs and detritus led to highly unstable systems, however, multi-channel feeding was stabilizing at low to moderate attack rates on autotrophs.(Figure 4).
@@ -426,9 +426,9 @@ autotrophs remain low.
 \\
 \indent Combining our model
 predictions with empirical food web data indicates that while
-multi-channel consumers in real webs may tend to consume a highly mixed
-diet (Figures 1-2), the key for system stability may lie in asymmetric
-attack rates. Thus, our results may unite the findings that (1) multi-channel feeding can be
+multi-channel consumers in real webs tend to consume a highly mixed
+diet (Figures 1-2), the key for system stability lies in asymmetric
+attack rates. Thus, our results integrate the findings that (1) multi-channel feeding can be
 stabilizing when weak \citep{McCann:1998} and (2) prey preferences of predators that link food chains affect stability \citep{Post:2000xx}, but also that (3) stable systems have omnivores
 which balance their resource needs across dichotomous resource
 channels \citep{Rooney:2006}. Dichotomous resource channels can be
@@ -487,8 +487,8 @@ manuscript. This work was conducted in part with the Trophic
 Structure Comparisons Working Group supported by the National Center
 for Ecological Analysis and Synthesis, a Center funded by NSF (Grant
 DEB-0072909), the University of California at Santa Barbara, and the
-state of California, and in part conducted while EMW was an EPA STAR
-Fellow and an NSF Postdoctoral Research Fellow in Biology (Grant DBI-0905806), and also while she was supported by the NSERC CREATE training program in biodiversity research.
+state of California, in part conducted through the The Centre for Biodiversity Theory and Modelling which is supported by the TULIP Laboratory of Excellence (ANR-10-LABX-41), and in part conducted while EMW was an EPA STAR
+Fellow and an NSF Postdoctoral Research Fellow in Biology (Grant DBI-0905806), and also while she was supported by the NSERC CREATE training program in biodiversity research. Support for CDM came from 
 
 
 \newpage
