Edits from Stuart Sandin, except for in relation to resilence (I tried those eidts but did not feel that they worked).

--- a/BrGr_Omnivory_2013.tex
+++ b/BrGr_Omnivory_2013.tex
@@ -126,7 +126,7 @@ pelagic fish vary strongly by species, with some species deriving less
 than 10\% of their diet from
 alternative energy channels and others consuming considerable amounts
 of benthic diet items \citep{Vander-Zanden:2002}. The empirical food web
-data used here however allows tests of the commonness or rarity of
+data used here however allow tests of the commonness or rarity of
 multi-channel feeding and its general trophic position in food webs across a wide array of ecosystem types. Next, we develop a simple food web model with nutrient
 recycling to assess whether multi-channel feeding is a stabilizing or destabilizing component of food webs, in comparison with grazing-only or detrital-only models.
 \\
@@ -135,7 +135,7 @@ recycling to assess whether multi-channel feeding is a stabilizing or destabiliz
 \\
 \emph{Methods}\\
 \\
-\indent We first examined data from real food webs to quantify study the prevalence and
+\indent We first examined data from real food webs to quantify the prevalence and
 variation of multi-channel feeding across ecosystems and trophic levels.
 Described food webs are inherently simplified versions of all actual
 feeding relationships in a system and using such food webs to look for
@@ -352,11 +352,11 @@ autotrophs versus detritus. In both system types, models with multi-channel feed
 \newline
 \indent The effect of multi-channel feeding on system resilience varied by system type. In terrestrial systems, multi-channel feeding tended to produce systems with
 intermediate resilience between the least resilient detritivory-only
-models and the most-resilient pure-herbivory models. Additionally, in terrestrial
+models and the most-resilient herbivory-only models. Additionally, in terrestrial
 systems multi-channel feeding produced only a small
 de-stabilizing effect. For freshwater systems, however, the
 destabilizing effect was far greater (Table 2). In freshwater parameter sets with equilibria, 
-multi-channel feeding generally produced less resilient systems, compared to models without multi-channel feeding. Return times in models with multi-channel feeding were twice as high as herbivory-only models (which tended to produce systems with the fastest return times) and 50\% higher than detritivory-only models (Table 2). 
+multi-channel feeding generally produced less resilent systems, compared to models without multi-channel feeding. Return times in models with multi-channel feeding were twice as high as herbivory-only models (which tended to produce systems with the shortest return times) and 50\% higher than detritivory-only models (Table 2). 
 \newline
 \indent Across both terrestrial and freshwater parameter space, multi-channel feeding was
 destabilizing at high attack rates on the autotroph (Figure 4a-d), and was
@@ -405,7 +405,7 @@ consumer interactions with the detrital web \citep{Moore:2004}. Thus, while our 
 green worlds may stabilize food webs under certain conditions. 
 Using a simple food web model with nutrient cycling and considering stability as assessed by return times calculated from the
 dominant eigenvalue, we found models with multi-channel feeding often produced
-stable webs. Such models, however, produced generally the fewest stable systems, compared to detritivory-only models, which produced only stable systems, or herbivory-only systems (Table 2). While return times were higher for multi-channel consumer models compared to herbivory-only, we found that multi-channel feeding could have a stabilizing effect in both terrestrial and freshwater parameter sets, even without the stabilizing forces of
+stable webs. Such models, however, produced the fewest stable systems (\(<50\%\)). In contrast, herbivory-only systems were consistently more stable (\(54.5\%\) of cases), while all of the detritivory-only models were stable (Table 2). While return times were higher for multi-channel consumer models compared to herbivory-only, we found that multi-channel feeding could have a stabilizing effect in both terrestrial and freshwater parameter sets, even without the stabilizing forces of
 predator-switching often used in other models that introduce this sort of omnivory
 \citep{Rooney:2006}. In particular, we found high attack rates on
 both autotrophs and detritus led to highly unstable systems, however, multi-channel feeding was stabilizing at low to moderate attack rates on autotrophs.(Figure 4).
