--- a/BrGr_Omnivory_2013.tex
+++ b/BrGr_Omnivory_2013.tex
@@ -32,7 +32,7 @@ Mazancourt\(^{8}\)\\
 \noindent \(^{2}\) University of California, San Diego, 9500 Gillman
 Drive \#0116, La Jolla, CA 92093 USA\\
 \noindent \(^{3}\) Dartmouth College, Department of Biological
-Sciences, 6044 Gilman, Hanover NH 03602,
+Sciences, 78 North College St., Hanover NH 03602,
 USA (\emph{kathryn.cottingham@dartmouth.edu})\\
 \noindent \(^{4}\) University of Chicago, Department of Ecology \&
 Evolution, Computation Institute, Chicago, IL 60637 USA (\emph{sallesina@uchicago.edu})\\ 
@@ -74,8 +74,7 @@ is equally common across terrestrial, freshwater and marine systems and occurs m
 among primary consumers.  We next
 developed a simple four-compartment nutrient cycling model for consumers
 eating autotrophs and detritus, which showed that---across terrestrial and aquatic ecosystems---multi-channel feeding is
-destabilizing at high attack rates on autotrophs, but
-stabilizing at low attack rates on autotrophs, compared to herbivory- or detritivory-only models. Together our results demonstrate that multi-channel feeding is common across ecosystems and may be a
+stabilizing at low attack rates on autotrophs, but destabilizing at high attack rates on autotrophs, compared to herbivory- or detritivory-only models. Together our results demonstrate that multi-channel feeding is common across ecosystems and may be a
 stabilizing force in real webs that have consumers with asymmetric attack rates.
 
 % Bring back if have more that 200 words someday:
@@ -100,7 +99,7 @@ detritus-based benthic webs appear common and may drive trophic cascades
 have been found in terrestrial soils \citep{Hunt:1987nw}, crop systems \citep{Settle:1996} and
 forests \citep{Miyashita:2003}.
 \\
-\indent Given its prevalence in many systems understanding how multi-channel feeding affects food web stability, especially in comparison to the more commonly-used models which have only grazing or detrital chains, may aid in explaining how complex natural food webs return to similar conditions following disturbance. Multi-channel consumers that link grazing and detrital resource channels may be especially
+\indent Given its prevalence in many systems, understanding how multi-channel feeding affects food web stability, especially in comparison to the more commonly-used models which have only grazing or detrital chains, may aid in explaining how complex natural food webs return to similar conditions following disturbance. Multi-channel consumers that link grazing and detrital resource channels may be especially
 important because they provide a unique way for detrital
 biomass to re-enter and affect the grazing web \citep{Polis:1996}. Such cross-chain feeding allows consumers to access detritus
 directly (by eating detritus) and/or indirectly (by feeding on lower consumers
@@ -152,7 +151,7 @@ vegetation (wetlands and mangroves)
 or marine based on their taxa. A complete list of the webs used, and
 their sources, is given in Appendix A.
 \\
-\indent We calculated estimates of the trophic level
+\indent We estimated the trophic level
 and diet specificity for each consumer taxon in each web. We computed the trophic
 level according to the flow
 information \citep{Levine:1980} when present. For binary food webs,
@@ -292,7 +291,7 @@ following \cite{Chesson:1983}:
 of the consumer on autotrophs (\(a_{AX}\)) is
 set to zero, and to pure herbivory when the attack rate
 of the consumer on detritus (\(a_{DX}\)) is
-set to zero.
+set to zero. We used a Type II functional response for realism and because Type I functional responses did not allow analytical solutions (due to the nutrient recycling and omnivory aspects of the model).
 
 \indent We defined parameters for the model (Table 1) for two of our
 four system types, freshwater and
@@ -301,16 +300,15 @@ continuum, varying in key attributes that may be important to how
 multi-channel feeding affects web stability. Specifically, freshwater systems
 tend to have smaller standing stocks of all pools, higher quality
 detritus, and faster nutrient cycling as compared to terrestrial
-systems \citep{Cebrian:2004}. We used a Type II functional response for realism and because Type I functional responses did not allow analytical solutions (due to the nutrient recycling and omnivory aspects of the model).
+systems \citep{Cebrian:2004}.
 \\ 
 \indent We designed the equations to be in
-expressed in units of the most limiting nutrient (here, \(gN m^{-2}  y^{-1}\)
-for a terrestrial system and \(\mu gP L^{-1}
-d^{-1}\) for a freshwater system). We used literature values from grassland
+expressed in units of the most limiting nutrient (here, \(g\,N\,m^{-2} \,y^{-1}\)
+for a terrestrial system and \(\mu g\,P\, L^{-1}\,d^{-1}\) for a freshwater system). We used literature values from grassland
 systems and North American temperate lakes and background knowledge to
 develop possible ranges for each parameter (Table 1), then explored
 parameter space around
-these ranges. While some studies have found higher quality detritus in aquatic systems result in higher assimilation and production efficiencies compared to terrestrial systems \citep{Cebrian:2004,Cebrian:2009hg}, our values do not reveal such a pattern. 
+these ranges. While some studies have found higher quality detritus in aquatic systems results in higher assimilation and production efficiencies compared to terrestrial systems \citep{Cebrian:2004,Cebrian:2009hg}, our values do not reveal such a pattern. 
 
 \\
 \indent We ran separate sets of 100,000 simulations to randomly explore both
@@ -347,7 +345,7 @@ analyzed in R 2.12.0.
 \emph{Results}\\
 \\
 \indent Our models suggest that the degree to which multi-channel feeding affects system stability and return time depends on the system type
-(terrestrial or freshwater) and the rates at which omnivores attack living
+(terrestrial or freshwater, as reflected by the parameter sets) and the rates at which omnivores attack living
 autotrophs versus detritus. In both system types, models with multi-channel feeding produced fewer parameter sets generating stable models compared to models herbivory-only and detritivory-only models (Table 2). 
 \newline
 \indent The effect of multi-channel feeding on system resilience varied by system type. In terrestrial systems, multi-channel feeding tended to produce systems with
@@ -356,7 +354,7 @@ models and the most-resilient herbivory-only models. Additionally, in terrestria
 systems multi-channel feeding produced only a small
 de-stabilizing effect. For freshwater systems, however, the
 destabilizing effect was far greater (Table 2). In freshwater parameter sets with equilibria, 
-multi-channel feeding generally produced less resilent systems, compared to models without multi-channel feeding. Return times in models with multi-channel feeding were twice as high as herbivory-only models (which tended to produce systems with the shortest return times) and 50\% higher than detritivory-only models (Table 2). 
+multi-channel feeding generally produced less resilent systems, compared to models without multi-channel feeding. Return times in models with multi-channel feeding were twice as long as herbivory-only models (which tended to produce systems with the shortest return times) and 50\% higher than detritivory-only models (Table 2). 
 \newline
 \indent Across both terrestrial and freshwater parameter space, multi-channel feeding was
 destabilizing at high attack rates on the autotroph (Figure 4a-d), and was
@@ -405,7 +403,7 @@ consumer interactions with the detrital web \citep{Moore:2004}. Thus, while our 
 green worlds may stabilize food webs under certain conditions. 
 Using a simple food web model with nutrient cycling and considering stability as assessed by return times calculated from the
 dominant eigenvalue, we found models with multi-channel feeding often produced
-stable webs. Such models, however, produced the fewest stable systems (\(<50\%\)). In contrast, herbivory-only systems were consistently more stable (\(54.5\%\) of cases), while all of the detritivory-only models were stable (Table 2). While return times were higher for multi-channel consumer models compared to herbivory-only, we found that multi-channel feeding could have a stabilizing effect in both terrestrial and freshwater parameter sets, even without the stabilizing forces of
+stable webs. Such models, however, produced the fewest stable systems (\(<50\%\)). In contrast, herbivory-only systems were consistently more stable (\(54.5\%\) of cases), while all of the detritivory-only models were stable (Table 2). While return times were higher for multi-channel consumer models compared to herbivory-only models, we found that multi-channel feeding could have a stabilizing effect in both terrestrial and freshwater parameter sets, even without the stabilizing forces of
 predator-switching often used in other models that introduce this sort of omnivory
 \citep{Rooney:2006}. In particular, we found high attack rates on
 both autotrophs and detritus led to highly unstable systems, however, multi-channel feeding was stabilizing at low to moderate attack rates on autotrophs.(Figure 4).
@@ -439,7 +437,7 @@ our terrestrial and freshwater parameterized models (Figure 4). Freshwater syste
 tend to have higher quality (C:N or C:P) living autotrophs, with
 resulting stronger herbivory and faster turnover
 times compared to terrestrial systems, while detritus in freshwater
-systems is often highly allochthonous, derived from the lower
+systems is often allochthonous, derived from the lower
 quality plant materials of terrestrial systems
 \citep{Cebrian:2004}. Thus, the high ratio of edibility of
 autotrophs versus detritus in freshwater
