Edits by me, hopefully the last set, looks good to go!

--- a/BrGr_Omnivory_2013.tex
+++ b/BrGr_Omnivory_2013.tex
@@ -32,7 +32,7 @@ Mazancourt\(^{8}\)\\
 \noindent \(^{2}\) University of California, San Diego, 9500 Gillman
 Drive \#0116, La Jolla, CA 92093 USA\\
 \noindent \(^{3}\) Dartmouth College, Department of Biological
-Sciences, 78 North College St., Hanover NH 03602,
+Sciences, 78 North College St., Hanover NH 03755,
 USA (\emph{kathryn.cottingham@dartmouth.edu})\\
 \noindent \(^{4}\) University of Chicago, Department of Ecology \&
 Evolution, Computation Institute, Chicago, IL 60637 USA (\emph{sallesina@uchicago.edu})\\ 
@@ -51,7 +51,7 @@ California - San Diego, 9500 Gilman Drive, La Jolla, CA 92093 USA
 \noindent Prepared as an {\bf article} for \emph{American
  Naturalist}\\
 
-\noindent {\bf Keywords:} food webs, stability, detritus, attack
+\noindent {\bf Keywords:} food webs, stability, detritus, green world, attack
 rates, multi-channel\\
 
 \noindent {\bf Supplements for online only:}\\
@@ -67,9 +67,9 @@ estimate trophic level and diet.
 \modulolinenumbers[2]
 
 \noindent {\bf Abstract}\\
-\noindent (At 199 words, of a 200 word limit): Recent advances in food web ecology highlight that most real food webs (1) represent an interplay between producer and detritus-based webs and, (2) are governed by consumers which are rampant omnivores. A possible avenue to unify these advances comes from models demonstrating that predators feeding on distinctly
+\noindent Recent advances in food web ecology highlight that most real food webs (1) represent an interplay between producer and detritus-based webs and, (2) are governed by consumers which are rampant omnivores. A possible avenue to unify these advances comes from models demonstrating that predators feeding on distinctly
 different channels may stabilize food webs. Empirical studies suggest many consumers engage in such behavior by feeding on prey items from both living-autotroph (green) and
-detritus-based (brown) webs---what we here term `multi-channel feeding'---but we know little about how common such feeding is across systems and trophic levels and its effect on system stability. Considering 23 empirical webs, multi-channel feeding
+detritus-based (brown) webs---what we term `multi-channel feeding'---but we know little about how common such feeding is across systems and trophic levels and its effect on system stability. Considering 23 empirical webs, we find that multi-channel feeding
 is equally common across terrestrial, freshwater and marine systems and occurs most often
 among primary consumers.  We next
 developed a simple four-compartment nutrient cycling model for consumers
@@ -85,7 +85,7 @@ stabilizing force in real webs that have consumers with asymmetric attack rates.
 \pagebreak
 \noindent {\bf Introduction}\\
 \\
-\indent Reconciling the complexity of food webs with their apparent stability over time, and in response to disturbance, has driven a large body of research in theoretical community ecology \citep{Pimm:1982,Polis:1998}. Much of this work has used models of (living autotroph-based) grazing chains and webs \citep[the `green world,'][]{Hairston:1960kx} that include strong top-down control \citep{Pimm:1982,McCann:1997}. Such models have found many factors common in natural systems can destabilize systems \citep{Holt:1994,Tanabe:2005jc}. For example, feeding on multiple prey items (omnivory) in its many forms can be highly destabilizing \citep{Holt:1994}. In contrast, work focusing on detrital or `brown world' chains, often using aspects of donor-control, show comparatively consistent stability \citep{Moore:2004,Blanchard:2011}. Models linking green and brown webs have traditionally done so by incorporating nutrient cycling, where dead materials from the green chain transfer to a detrital pool, which  mineralize into nutrients that limit the basal autotrophs of the green chain \citep{DeAngelis:1992, DeAngelis:1989}. Empirical food web studies, however, underscore that nutrient cycling is not the only connection between grazing and detrital webs.
+\indent Reconciling the complexity of food webs with their apparent stability over time, and in response to disturbance, has driven a large body of research in theoretical community ecology \citep{Pimm:1982,Polis:1998}. Much of this work has used models of (living autotroph-based) grazing chains and webs \citep[the `green world,'][]{Hairston:1960kx} that include strong top-down control \citep{Pimm:1982,McCann:1997}. Such models have found many factors common in natural systems can destabilize systems \citep{Holt:1994,Tanabe:2005jc}. For example, feeding on multiple prey items (omnivory) in its many forms can be highly destabilizing \citep{Holt:1994}. In contrast, work focusing on detrital or `brown world' chains, often using aspects of donor-control, shows comparatively consistent stability \citep{Moore:2004,Blanchard:2011}. Models linking green and brown webs have traditionally done so by incorporating nutrient cycling, where dead materials from the green chain transfer to a detrital pool, which  mineralize into nutrients that limit the basal autotrophs of the green chain \citep{DeAngelis:1992, DeAngelis:1989}. Empirical food web studies, however, underscore that nutrient cycling is not the only connection between grazing and detrital webs.
 \\
 \indent Multi-channel \citep{Odum:1969,Moore:1988,Polis:1996} or multi-chain \citep{Vadeboncoeur:2005} feeding, where consumers link distinct resource channels, has been noted for some time \citep{Odum:1984}. Many omnivores are actually
 multi-channel consumers that link grazing and
@@ -102,7 +102,7 @@ forests \citep{Miyashita:2003}.
 \indent Given its prevalence in many systems, understanding how multi-channel feeding affects food web stability, especially in comparison to the more commonly-used models which have only grazing or detrital chains, may aid in explaining how complex natural food webs return to similar conditions following disturbance. Multi-channel consumers that link grazing and detrital resource channels may be especially
 important because they provide a unique way for detrital
 biomass to re-enter and affect the grazing web \citep{Polis:1996}. Such cross-chain feeding allows consumers to access detritus
-directly (by eating detritus) and/or indirectly (by feeding on lower consumers
+directly (by eating detritus) and/or indirectly (by eating lower consumers
 that are themselves detritivores or multi-channel consumers). This key link between
 predation and the resource pool that is critical to nutrient cycling may
 complicate the effect of multi-channel feeding on food web
@@ -194,7 +194,7 @@ a diet index of 0.5 and their distance from an equally-derived diet
 patterns in diet specialization
 with a mixed-effects ANOVA model that included a linear effect of
 trophic level, a fixed categorical variable for system type, 
-and a random effect for food web identity (accounting for the the non-independence of multiple taxa within each web). Because we had an
+and a random effect for food web identity (accounting for the non-independence of multiple taxa within each web). Because we had an
 incomplete set of systems within each
 web type (for flow data we had no terrestrial webs, and for binary data
 we had no emergent vegetation webs), we did not include web type
@@ -202,7 +202,7 @@ we had no emergent vegetation webs), we did not include web type
 variance-covariance structures and error distributions
 \citep{Bolker:2009, Wolfinger:1996} 
 and selected a Gaussian distribution with
-autoregressive heterogenous variances based in
+autoregressive heterogeneous variances based in
 Akaike's Information Criterion (AIC) and examination
 of residuals. 
 \\ 
@@ -354,12 +354,10 @@ models and the most-resilient herbivory-only models. Additionally, in terrestria
 systems multi-channel feeding produced only a small
 de-stabilizing effect. For freshwater systems, however, the
 destabilizing effect was far greater (Table 2). In freshwater parameter sets with equilibria, 
-multi-channel feeding generally produced less resilent systems, compared to models without multi-channel feeding. Return times in models with multi-channel feeding were twice as long as herbivory-only models (which tended to produce systems with the shortest return times) and 50\% higher than detritivory-only models (Table 2). 
+multi-channel feeding generally produced less resilient systems, compared to models without multi-channel feeding. Return times in models with multi-channel feeding were twice as long as herbivory-only models (which tended to produce systems with the shortest return times) and 50\% higher than detritivory-only models (Table 2). 
 \newline
 \indent Across both terrestrial and freshwater parameter space, multi-channel feeding was
-destabilizing at high attack rates on the autotroph (Figure 4a-d), and was
-stabilizing (Figure 4b, 4d, terrestrial) or had no effect (Figure 4a, 4c,
-freshwater) at low attack rates on the autotroph. When the omnivore
+stabilizing at low attack rates on the autotroph, and destabilizing at high attack rates on the autotroph (Figure 4a-d). When the omnivore
 attacked autotrophs at a high rate, the attack rate on
 detritus had to be comparatively much lower to produce a stable system
 (Figure 4a-d). In models with multi-channel feeding---across both system types---the transition from a stable to unstable system with higher attack rates resulted from system dynamics entering limit cycles, not from the extinction of any pool. 
@@ -403,7 +401,7 @@ consumer interactions with the detrital web \citep{Moore:2004}. Thus, while our 
 green worlds may stabilize food webs under certain conditions. 
 Using a simple food web model with nutrient cycling and considering stability as assessed by return times calculated from the
 dominant eigenvalue, we found models with multi-channel feeding often produced
-stable webs. Such models, however, produced the fewest stable systems (\(<50\%\)). In contrast, herbivory-only systems were consistently more stable (\(54.5\%\) of cases), while all of the detritivory-only models were stable (Table 2). While return times were higher for multi-channel consumer models compared to herbivory-only models, we found that multi-channel feeding could have a stabilizing effect in both terrestrial and freshwater parameter sets, even without the stabilizing forces of
+stable webs. Such models, however, produced the fewest stable systems (\(<50\%\)); in contrast, herbivory-only systems were consistently more stable (\(54.5\%\) of cases), and all of the detritivory-only models were stable (Table 2). While return times were higher for multi-channel consumer models compared to herbivory-only models, we found that multi-channel feeding could have a stabilizing effect in both terrestrial and freshwater parameter sets, even without the stabilizing forces of
 predator-switching often used in other models that introduce this sort of omnivory
 \citep{Rooney:2006}. In particular, we found high attack rates on
 both autotrophs and detritus led to highly unstable systems, however, multi-channel feeding was stabilizing at low to moderate attack rates on autotrophs.(Figure 4).
@@ -554,7 +552,7 @@ Parameter & Description & Units  & Values evaluated* & Units & Values evaluated*
 \noindent {\footnotesize * Values evaluated give the range examined for most results, then parenthetically the value used to test sensitivity to attack rates.}
 
 \newpage
-\noindent \textbf{Table 2:} Parameter search results. We give the percent of systems with negative critical eigenvalues (\% stable systems) and their mean return time for freshwater and terrestrial parameter sets.
+\noindent \textbf{Table 2:} Parameter search results: we give the percent of systems with negative critical eigenvalues (\% stable systems) and their mean return time for freshwater and terrestrial parameter sets.
 \begin{center}
 {\footnotesize 
   \begin{tabular}{| p{4.5cm} | p{2cm}  p{2cm} || p{2cm} p{2cm} |  }   
@@ -597,15 +595,15 @@ affect food web stability we used a four-compartment nutrient recycling
 model that varied whether or not the consumer ate detritus (thick dashed
 arrow). Thick black arrows represent internal flows, while thick gray arrows
 represent inputs and outputs; thinner arrows show flows
-to the detrital pool via death (undashed gray) and sloppy feeding (undashed black) and to the nutrient
-pool via excretion (dashed). \\
+to the detrital pool via death (solid gray lines) and sloppy feeding (solid black lines) and to the nutrient
+pool via excretion (dashed lines). \\
 
-\noindent {\bf Figure 4}: Contour plot of return times
+\noindent {\bf Figure 4}: Contour plots of return times
  depending on attack rates on autotrophs 
 versus attack rates on detritus by a multi-channel consumer within freshwater (a and c)
 and terrestrial (b and d) parameter sets (parameter values given in Table 1). 
-Contour lines show return times; the shaded gray areas represent parameter space where systems were unstable while white areas represent parameter space where systems were
-stable. Areas with diagonal red dots represents parameter space where
+Black contour lines show return times; the shaded gray areas represent parameter space where systems were unstable while unshaded areas represent parameter space where systems were
+stable. Overlay areas with diagonal red lines represents parameter space where
 multi-channel feeding is stabilizing (versus destabilizing) compared to a herbivory-only (a-b) or a detritivory-only model (c-d).\\
 
 \newpage
@@ -641,33 +639,4 @@ multi-channel feeding is stabilizing (versus destabilizing) compared to a herbiv
 \end{figure}
 
 
-
-
-
 \end{document}
-
-% Edited chunks:
-
-% at low attack rate on the autotrophs they are probably near-starving and a second food source stabilises the system.
-
-% Additionally, under the terrestrial parameter set stability increased initially as attack rates on autotrophs increase;
-
-% My version: this is because at very low consumer attack rates on autotrophs, autotrophs slowly exhaust their nutrient pool, extending the time for the system to stabilize, when compared to a system with higher attack rates on autotrophs. In this latter case, autotrophs are controlled by both their nutrient pool and attack rates by the omnivore. At higher attack rates, stability declines quickly until, at very high attack rates on autotrophs, the system enters permanent oscillations between the predator and autotroph (Fig 3a).
-
-
-
-
-%%% Add some refs from here in, then delete! %%%
-\indent The prevalence of omnivory in real systems and its effects on stability
-have been areas of active debate among food web researchers for
-decades \citep{McCann:1997, Pimm:1982, Polis:1991}. While early
-work suggested omnivory should be highly destabilizing and thus rare
-\citep{Pimm:1982}, empirical food webs studies have shown it is present in all
-systems \citep{Thompson:2007}, and rampant in some terrestrial
-\citep{Polis:1991} and marine systems
-\citep{Pinnegar:2000}. Similarly, theory has shown that omnivory may stabilize or
-destabilize systems depending on the web structure
-\citep{Vandermeer:2006} and that it can be a stabilizing force when
-weak \citep{McCann:1998} or when it couples fast and
-slow energy sources \citep{Rooney:2006}.
-\\
